--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ background-color: transparent;
     color: #a19d9d;
 }
 .pcontact{
-    font-family:'Miltonian',sans-serif;font-size: 40px;font ;
+    font-family:'Miltonian',sans-serif;font-size: 40px;
 }
 .buttonabout{
     background-color: rgb(255, 255, 255);
